# knowledge-graph

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.example.yaml  default.yaml
data/: 业务需求描述.md  动手学深度学习_章节目录.txt  深度学习DeepLearning_章节目录.txt  神经网络与深度学习_章节目录.txt
data/input/: 优化算法.csv  卷积神经网络.csv  多层感知机.csv  循环神经网络.csv  注意力机制.csv  深度学习计算.csv  现代卷积神经网络.csv  现代循环神经网络.csv  目录.csv  线性神经网络.csv  自然语言处理：应用.csv  自然语言处理：预训练.csv  计算性能.csv  计算机视觉.csv  预备知识.csv
docs/: ADD操作详细解析.md  AGENTS.md  LANGGRAPH_REARCHITECTURE.md  development.md  index.html  图谱微调操作规范.md  文档与代码对照表.md  知识图谱评估规则.md
docs/assets/: app.js  style.css
docs/项目流程/: 00_总体说明与全架构图.md  01_步骤1_L1提取.md  02_步骤2_L1验证.md  03_步骤3_L1前置关系提取.md  04_步骤4_实体与关系抽取.md  05_步骤5_向量化.md  06_步骤6_数据校准.md  07_步骤6_5_L2重聚合.md  08_步骤7_评测.md  09_步骤7_5_微调.md  10_步骤8_Neo4j构建.md  11_全流程细节级实现说明.md  README.md
knowledge_graph/: __init__.py  __main__.py  langgraph_pipeline.py  langgraph_state.py  pipeline.py
knowledge_graph/agents/: __init__.py  base_agent.py  calibration.py  entity_extractor.py  evaluation.py  graph_builder.py  l1_extractor.py  l1_prerequisite.py  l1_validator.py  recluster.py  refinement.py  vectorization.py
knowledge_graph/steps/: __init__.py  build.py  calibrate.py  evaluate.py  extract.py  extract_l1.py  extract_l1_rels.py  validate_l1.py  (+1 more)
output/: calibrated_entities.csv  calibrated_relationships.csv  entities.csv  l1_concepts.yaml  llm_cache.json  relationships.csv
prompts/: Cluster_Evaluation_Prompt.txt  Entity_Extraction_Prompt.txt  Evaluation_Prompt.txt  L1_Extraction_Prompt.txt  L1_Extraction_With_Feedback_Prompt.txt  L1_Prerequisite_Prompt.txt  L1_Validation_Prompt.txt  Merge_Entities_Prompt.txt  Recluster_Prompt.txt  Refinement_Plan_Prompt.txt  entity_relation_extraction.txt
tests/: test_pipeline_integration.py  test_refinement.py
tools/: resize_demo_gif.py
(+13 files in other folders)
